# Projeto_FP

./: .gitignore  CMakeLists.txt  CONTRIBUIR.md  README.md  main.c
docs/: CLI.md  CONTRIBUIR.md
include/: app.h  cli.h  comum.h  data_hora.h  formatacao_texto.h  fs.h  stdout.h
scripts/: .gitignore  start.ps1  start.sh
scripts/indexer/: context.py  main.py  requirements.txt  util.py
src/: app.c  cli.c  comum.h  data_hora.c  fs.c  stdout.c
src/sistema/: fs.c  fs.h
